Sat Jul 16 18:20:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

	* tao/DynamicInterface/Request.inl:
	  Added include of NVList.h to fix compile errors in builds with
          inlining enabled

Sat Jul 16 10:24:36 2005  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

	* orbsvcs/orbsvcs/PortableGroup/Portable_Group_Map.{cpp,h}: Added 
	  a lock to prevent race conditions.  Thanks to Frank Hunleth
 	  <frank@hunleth.com> and Felix Perez Alamillo
 	  <fpalamillo@indra.es> for helping with this.	
  
Sat Jul 16 02:18:12 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_valuebox/valuebox_ci.cpp:
        
          Changed code generation of the _boxed_out() method for
          boxed array types to return the type of the valuebox
          member's .out() method. The _boxed_out() method previously
          returned the member's .inout() method, which could
          potentially cause a memory leak if the member _var's
          contained pointer is non-zero when _boxed_out() is
          called.

Fri Jul 15 17:01:34 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/DsLogAdmin.mpc:

	  Added Hash_Persistence_Strategy.*, Hash_LogStore.*, and 
	  Hash_LogRecordStore.* to DsLogAdmin_Serv project.

	* orbsvcs/orbsvcs/Log/LogMgr_i.cpp:
	* orbsvcs/orbsvcs/Log/LogMgr_i.h:

	  Use dynamically loaded persistence strategy to create 
	  LogStore.

	* orbsvcs/orbsvcs/Log/Log_Persistence_Strategy.h:
	* orbsvcs/orbsvcs/Log/Hash_Persistence_Strategy.cpp:
	* orbsvcs/orbsvcs/Log/Hash_Persistence_Strategy.h:

	  New TAO_Log_Persistence_Strategy abstract base class which 
	  strategizes the log parameter and log record storage, with 
	  concrete TAO_Hash_Persistence_Strategy.h implementation.

	* orbsvcs/orbsvcs/Log/LogMgr_i.cpp:
	* orbsvcs/orbsvcs/Log/LogMgr_i.h:
	* orbsvcs/orbsvcs/Log/LogStore.h:
	* orbsvcs/orbsvcs/Log/Hash_LogStore.cpp:
	* orbsvcs/orbsvcs/Log/Hash_LogStore.h:
