@@ -151,11 +151,6 @@ TAO_Portable_Group_Map::dispatch (PortableGroup::TagGroupTaggedComponent* group_
 u_long
 TAO_GroupId_Hash::operator () (const PortableGroup::TagGroupTaggedComponent *id) const
 {
-  ACE_GUARD_RETURN (TAO_SYNCH_MUTEX,
-                    guard,
-                    this->lock_,
-                    0);
-
   u_long hash =
     ACE::hash_pjw ((const char *) id->group_domain_id,
                    ACE_OS::strlen ((const char *) id->group_domain_id));
@@ -175,10 +170,6 @@ TAO_GroupId_Equal_To::operator () (
   const PortableGroup::TagGroupTaggedComponent *lhs,
   const PortableGroup::TagGroupTaggedComponent *rhs) const
 {
-  ACE_GUARD_RETURN (TAO_SYNCH_MUTEX,
-                    guard,
-                    this->lock_,
-                    -1);
   return
     ACE_OS::strcmp (lhs->group_domain_id, rhs->group_domain_id) == 0) 
     && lhs->object_group_id == rhs->object_group_id
